# tpFastApi

./: .dockerignore  .gitignore  Dockerfile  Insomnia_API_TEST.yaml  README.md  docker-compose.yml  pyproject.toml  test_main.http
app/: __init__.py  __main__.py  database.py  main.py  tokens_forgery.py
app/models/: __init__.py  logs.py  user.py
app/views/: __init__.py  log.py  users.py
